# mtms

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  README.md
.github/workflows/: cli.yml  docs.yml  full.yml  gui.yml
examples/: bin_inc.toml
src/cli/: cli.cpp  cli.hpp  main.cpp  program.cpp  program.hpp
src/core/: alphabet.cpp  alphabet.hpp  direction.hpp  project.cpp  project.hpp  state.hpp  string.cpp  string.hpp  symbol.hpp  tape.cpp  tape.hpp  tm.cpp  tm.hpp  transition.hpp
